@@ -118,6 +118,9 @@
           initial configuration preflight phase or not. This is both easier to
           use and more correct than the old method of creating a pool userdata
           entry in the process pool.</li>
+      <li>New function ap_get_conn_socket to get the socket descriptor for a
+          connection. This should be used instead of accessing the core
+          connection config directly.</li>
     </ul>
   </section>
 
