@@ -68,7 +68,7 @@ static int noloris_conn(conn_rec *conn)
     shm_rec = apr_shm_baseaddr_get(shm);
     while (shm_rec[0] != '\0') {
         if (!strcmp(shm_rec, conn->remote_ip)) {
-            apr_socket_t *csd = ap_get_core_module_config(conn->conn_config);
+            apr_socket_t *csd = ap_get_conn_socket(conn);
             ap_log_cerror(APLOG_MARK, APLOG_ERR, 0, conn,
                           "Dropping connection from banned IP %s",
                           conn->remote_ip);
