@@ -208,7 +208,7 @@ static int ap_process_http_sync_connection(conn_rec *c)
         }
 
         if (!csd) {
-            csd = ap_get_core_module_config(c->conn_config);
+            csd = ap_get_conn_socket(c);
         }
         apr_socket_opt_set(csd, APR_INCOMPLETE_READ, 1);
         apr_socket_timeout_set(csd, c->base_server->keep_alive_timeout);
